PROJECT( buttobfootball )

CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/)

FIND_PACKAGE( SDL2 REQUIRED )
FIND_PACKAGE( GLEW REQUIRED )
FIND_PACKAGE( OpenGL REQUIRED )

INCLUDE_DIRECTORIES( ${SDL2_INCLUDE_DIR} )

SET( ButtonFootball_Sources
    main.cpp
    mainwindow.cpp
)

ADD_EXECUTABLE( ${PROJECT_NAME} ${ButtonFootball_Sources} )

TARGET_LINK_LIBRARIES( ${PROJECT_NAME} ${SDL2_LIBRARY} ${GLEW_LIBRARIES} ${OPENGL_LIBRARIES} )
