PROJECT( buttonfootball )

CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

SET( CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/ )

FIND_PACKAGE( SDL2 REQUIRED )
FIND_PACKAGE( GLEW REQUIRED )
FIND_PACKAGE( OpenGL REQUIRED )
FIND_PACKAGE( Box2D REQUIRED )

INCLUDE_DIRECTORIES( ${SDL2_INCLUDE_DIR} )

# Information message
MESSAGE( STATUS "${PROJECT_NAME} will be built to install into ${CMAKE_INSTALL_PREFIX}" )

ADD_SUBDIRECTORY( src )
